# agv_method_cc

./: .coverage  AGV_v5.0_SETUP_COMPLETO.md  CLAUDE.md  ORDEM_IMPLEMENTACAO.md  Prompt_F4_BaselineFoundation_v1.0.md  Prompt_F4_Implementador_Mestre_v8.3.md  README.md  RESUMO_EVOLUCAO_BASELINE_FOUNDATION.md  atualizar-github.bat  del_test.md  iniciar-trabalho.bat
.claude/: hooks.json  settings.local.json
.claude/agents/: agv-context-analyzer.md  agv-implementor.md  agv-scaffolder.md
Guides/: AGV_Method_Principios_Chave_v4.0.md  AGV_Method_Workflow_v5.0.md
agv-outputs/resultados/: results_scaffold_20250902_180223.json
agv-outputs/validadores/: validate_scaffold_20250902_180223.py
agv-system/: AGV_SUBAGENTS_CONFIGURACOES_COMPLETAS.md  AGV_v5.0_GUIA_COMPLETO.md  GUIA_METODOLOGIA_OTIMIZACAO_VALIDADORES_AGV.md  RELATORIO_MELHORIAS_VALIDADOR_AGV.md  pyproject.toml  setup_agv.py
agv-system/Docs/: AGV_SUBAGENTS_CONFIGURACOES_COMPLETAS.md  AGV_v5.0_DOCUMENTACAO_TECNICA.md  (+1 more)
contextos-extraidos/: contexto-alvo-0.md  contexto-alvo-1-novo.md
iabank/: .pre-commit-config.yaml  LICENSE  README.md  RELATORIO_FOUNDATION_DNA.md  docker-compose.yml
iabank/backend/: .coveragerc  .env.example  Dockerfile  INSTRUCOES_TESTES.md  pyproject.toml
iabank/backend/src/iabank/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
iabank/backend/src/iabank/core/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py  viewsets.py
iabank/backend/src/iabank/core/management/commands/: seed_foundation_data.py
iabank/backend/src/iabank/core/migrations/: 0001_initial.py
iabank/backend/src/iabank/core/tests/: test_models.py  test_views.py
iabank/backend/src/iabank/customers/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  viewsets.py
iabank/backend/src/iabank/customers/migrations/: 0001_initial.py
iabank/backend/src/iabank/customers/tests/: factories.py  test_models.py
iabank/backend/src/iabank/finance/: apps.py  urls.py
iabank/backend/src/iabank/operations/: __init__.py  apps.py  urls.py
iabank/backend/src/iabank/users/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  viewsets.py
iabank/backend/src/iabank/users/migrations/: 0001_initial.py
scripts/: agv_context_extractor.py  validate_agv_quality.py  validate_blueprint_conformity.py
(+43 files in other folders)
